first_responsive_website.css
/* CSS Reset */
* {
    margin: 0;
    padding: 0;

}

html{
    scroll-behavior: smooth;
}

/* CSS Variables */
:root{
    --navbar-height:59px;
}

/* Navigation Bar */
#navbar {
    display: flex;
    position: sticky;
    align-items: center;
    top: 0px;

}

#navbar::before {
    content: "";
    background-color: black;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 100%;
    z-index: -1;
    opacity: 0.7;
}

/* Logo */
#logo {
    margin: 10px 34px;
}

#logo img {
    height: 45px;
    margin: 0px 10px;
}

#navbar ul {
    display: flex;
    font-family: 'Baloo 2', cursive;

}

#navbar ul li {
    list-style: none;
    font-size: 1.3rem;
}

#navbar ul li a {
    color: white;
    display: block;
    padding: 3px 22px;
    border-radius: 20px;
    text-decoration: none;

}

#navbar ul li a:hover {
    color: black;
    background-color: white;
}

/* Home section */
#home {
    display: flex;
    flex-direction: column;
    padding: 3px 200px;
    height: 660px;
    justify-content: center;
    align-items: center;
    font-family: 'Bree Serif', serif;

}

#home::before {
    content: "";
    position: absolute;
    background: url(bg5.jpg)no-repeat center center/cover;
    /* filter: invert(10%); */
    height: 100%;
    top: 0px;
    left: 0px;
    width: 100%;
    z-index: -1;
    opacity: 0.89;
}

#home h1 {
    color: white;
    text-align: center;
    font-family: 'Bree Serif', serif;
}

#home p {
    color: white;
    text-align: center;
    font-size: 1.5rem;
    font-family: 'Bree Serif', serif;
}

/* Services classes */
#services {
    margin: 34px;
    display: flex;
}

#services .box {
    border: 2px solid brown;
    padding: 34px;
    margin: 3px 5px;
    border-radius: 25px;
    background-color: #f8e8e8a6;
}

#services .box img {
    height: 160px;
    margin: auto;
    display: block;
}

#services .box p {
    font-family: 'Bree Serif', serif;
}

/* Client Section */
#client-section {
    position: relative;
}

#client-section::before {
    content: "";
    position: absolute;
    background: url(bg6.jpg);
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: 0.4;
}

#clients {
    display: flex;
    justify-content: center;
    align-items: center;

}

.client-items {
    padding: 34px;
}

#clients img {
    height: 75px;

}

/* Contact Section */
#contact {
    position: relative;
}

#contact::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: 0.7;
    /* background: url('ContactUs.jpg') no-repeat center center/cover; */
}

#contact-box {
    display: flex;
    justify-content: center;
    text-align: center;
    padding-bottom: 34px;
    ;
}

#contact-box input,
#contact-box textarea {
    width: 100%;
    padding: 0.5rem;
    border-radius: 9px;
    font-size: 1.1rem;
}

#contact-box form {
    width: 40%;

}

.form-group{
    margin:5px;
}

#contact-box label {
    font-size: 1.3rem;
    font-family: 'Bree Serif', serif;
    
}

footer {
    background: black;
    color: white;
    padding: 9px 20px;
}

/* Utility class */
.h-primary {
    font-family: 'Bree Serif', serif;
    font-size: 3.2rem;
    padding: 12px;
}

.h-secondary {
    font-family: 'Bree Serif', serif;
    font-size: 2.0rem;
    padding: 12px;
}

.btn {
    padding: 6px 20px;
    border: 2px solid white;
    background-color: brown;
    color: white;
    margin: 17px;
    font-size: 1.5rem;
    border-radius: 10px;
    cursor: pointer;
}

.center {
    text-align: center;
}

